test_output.txt
    Blocking waiting for file lock on artifact directory
   Compiling shade v0.0.0 (C:\Users\nwaug\Desktop\Blockchain\DripsWave\shade-stellar-contract\contracts\shade)
error[E0277]: the trait bound `soroban_sdk::xdr::ScVal: TryFrom<&core::option::Option<InvoiceStatus>>` is not satisfied
  --> contracts\shade\src\types.rs:68:1
   |
68 | #[contracttype]
   | ^^^^^^^^^^^^^^^ the trait `From<InvoiceStatus>` is not implemented for `soroban_sdk::xdr::ScVal`
   |
   = help: the following other types implement trait `From<T>`:
             `&soroban_sdk::xdr::ScVal` implements `From<soroban_env_common::object::ScValObjRef<'_>>`
             `soroban_sdk::xdr::ScVal` implements `From<&()>`
             `soroban_sdk::xdr::ScVal` implements `From<&Fp2>`
             `soroban_sdk::xdr::ScVal` implements `From<&Fr>`
             `soroban_sdk::xdr::ScVal` implements `From<&G1Affine>`
             `soroban_sdk::xdr::ScVal` implements `From<&G2Affine>`
             `soroban_sdk::xdr::ScVal` implements `From<&bool>`
             `soroban_sdk::xdr::ScVal` implements `From<&core::option::Option<T>>`
           and 48 others
   = note: required for `InvoiceStatus` to implement `Into<soroban_sdk::xdr::ScVal>`
   = note: required for `soroban_sdk::xdr::ScVal` to implement `From<&core::option::Option<InvoiceStatus>>`
   = note: 1 redundant requirement hidden
   = note: required for `&core::option::Option<InvoiceStatus>` to implement `Into<soroban_sdk::xdr::ScVal>`
   = note: required for `soroban_sdk::xdr::ScVal` to implement `TryFrom<&core::option::Option<InvoiceStatus>>`
   = note: required for `&core::option::Option<InvoiceStatus>` to implement `TryInto<soroban_sdk::xdr::ScVal>`
   = note: this error originates in the attribute macro `contracttype` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `shade` (lib test) due to 1 previous error
